syntax = "proto3";

package kuksa.val.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// VSS Data Point with typed values
message DataPoint {
  string path = 1;
  oneof value {
    string string_value = 2;
    int32 int_value = 3;
    int64 int64_value = 4;
    float float_value = 5;
    double double_value = 6;
    bool bool_value = 7;
    string string_array_value = 8;
    int32 int_array_value = 9;
    float float_array_value = 10;
    bool bool_array_value = 11;
  }
  google.protobuf.Timestamp timestamp = 12;
}

// Data Type definition
message DataType {
  enum Type {
    STRING = 0;
    INT8 = 1;
    INT16 = 2;
    INT32 = 3;
    INT64 = 4;
    UINT8 = 5;
    UINT16 = 6;
    UINT32 = 7;
    UINT64 = 8;
    FLOAT = 9;
    DOUBLE = 10;
    BOOLEAN = 11;
    STRING_ARRAY = 12;
    INT8_ARRAY = 13;
    INT16_ARRAY = 14;
    INT32_ARRAY = 15;
    INT64_ARRAY = 16;
    UINT8_ARRAY = 17;
    UINT16_ARRAY = 18;
    UINT32_ARRAY = 19;
    UINT64_ARRAY = 20;
    FLOAT_ARRAY = 21;
    DOUBLE_ARRAY = 22;
    BOOLEAN_ARRAY = 23;
    STRUCT = 24;
    STRUCT_ARRAY = 25;
  }
  Type type = 1;
}

// VSS Entry metadata
message VSSEntry {
  string path = 1;
  string description = 2;
  DataType data_type = 3;
  oneof value {
    string string_value = 4;
    int32 int_value = 5;
    int64 int64_value = 6;
    float float_value = 7;
    double double_value = 8;
    bool bool_value = 9;
  }
  string unit = 10;
  string min = 11;
  string max = 12;
  string enum = 13;
  string array_size = 14;
  bool actuator = 15;
  bool sensor = 16;
  bool attribute = 17;
  string branch = 18;
}

// Get request
message GetRequest {
  repeated string paths = 1;
}

// Get response
message GetResponse {
  repeated DataPoint data_points = 1;
}

// Set request
message SetRequest {
  repeated DataPoint updates = 1;
}

// Set response
message SetResponse {
  repeated DataPoint data_points = 1;
}

// Subscribe request
message SubscribeRequest {
  string subscription_id = 1;
  repeated string paths = 2;
}

// Subscribe response
message SubscribeResponse {
  repeated DataPoint data_points = 1;
  string subscription_id = 2;
}

// Unsubscribe request
message UnsubscribeRequest {
  string subscription_id = 1;
}

// Unsubscribe response
message UnsubscribeResponse {
  string subscription_id = 1;
}

// VSS Tree request
message VSSTreeRequest {
  string path = 1;  // Empty path returns entire tree
}

// VSS Tree response
message VSSTreeResponse {
  repeated VSSEntry entries = 1;
}

// Error details
message Error {
  int32 code = 1;
  string message = 2;
  string details = 3;
}

// Main VSS service definition
service VSS {
  // Get current values
  rpc Get(GetRequest) returns (GetResponse);

  // Set values
  rpc Set(SetRequest) returns (SetResponse);

  // Subscribe to value changes (server streaming)
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);

  // Unsubscribe from value changes
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);

  // Get VSS tree structure
  rpc GetVSSTree(VSSTreeRequest) returns (VSSTreeResponse);

  // Health check
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty);
}